small changes to fix warnings that the code analysis gave